asset service fetching started

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="wrapper">
 <app-sidebar class="pos-rel"></app-sidebar>
-<app-main class="flex-1 pos-rel"></app-main>
+<app-main class="flex-1 pos-rel border-rad"></app-main>
 </div>
