--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,2 @@
-<p>main works!</p>
+<app-calculator class="border-rad flex-c-c gap-1"></app-calculator>
+<app-graph class="flex-1 border-rad mt-1"></app-graph>
