--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,4 +19,21 @@ h3{
     font-size: 20px;
 }
 
+.mt-1{
+margin-top: 2rem;
+}
+
+.border-rad{
+    border-radius: 16px;
+}
+
+.flex-c-c{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gap-1{
+gap: 2rem;
+}
 
