--- a/src/app/calculator/calculator.component.scss
+++ b/src/app/calculator/calculator.component.scss
@@ -2,12 +2,25 @@
     width: 30px;
 }
 
-input {
+.inputNumber {
     background-color: black;
     padding: 4px;
     margin-right: 12px;
     border: unset;
     border-right: 1px solid rgba(255, 255, 255, 0.65);
+    color: white;
+}
+
+.inputAsset {
+    background-color: black;
+    padding: 4px;
+    margin-right: 8px;
+    border: unset;
+    width: 80px;
+    color: white;
+}
+input::placeholder{
+    color: white;
 }
 
 input::-webkit-outer-spin-button,
