--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -5,6 +5,6 @@ app-calculator{
 app-graph{
     width: 100%;
     height: 100%;
-    background-color: rgb(128, 128, 128);
+    // background-color: rgb(121, 111, 111);
     padding: 2rem;
 }
