--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,32 +1,53 @@
-.wrapper {
+:host {
+    background-color: black;
     display: flex;
     justify-content: flex-start;
     height: 100vh;
     max-height: 100%;
-    width: 100%;
+    // width: 100%;
     max-width: 100%;
+    overflow: hidden;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-right: 3rem;
+    gap: 2rem;
+}
+
+.leftSection{
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: space-between;
+    width: 30%;
+    height: 100%;
+}
+
+.rightSection{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
 }
 
 .flex-1 {
     flex: 1;
 }
 
-.pos-rel{
+.pos-rel {
     position: relative;
 }
 
-app-sidebar {
-    width: 16%;
-    min-width: 200px;
-    background-color: rgb(47, 48, 56);
-}
 
-app-main {
-    margin: 2rem;
-    padding: 3rem;
-    background-color: rgb(147, 147, 148);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
+
+
+
+
