--- a/src/app/calculator/calculator.component.scss
+++ b/src/app/calculator/calculator.component.scss
@@ -1,26 +1,37 @@
+:host {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    .currencyOne {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(0, 0, 0);
+        border-radius: 16px;
+        height: 36px;
+        min-width: 150px;
+        width: 40%;
+    }
+    .currencyEUR {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(0, 0, 0);
+        border-radius: 16px;
+        height: 36px;
+        min-width: 150px;
+        width: 40%;
+        text-align: center;
+
+        .currStable {
+            width: 100px;
+        }
+    }
+}
+
 .imgArrows {
-    width: 30px;
-}
-
-.inputNumber {
-    background-color: black;
-    padding: 4px;
-    margin-right: 12px;
-    border: unset;
-    border-right: 1px solid rgba(255, 255, 255, 0.65);
-    color: white;
-}
-
-.inputAsset {
-    background-color: black;
-    padding: 4px;
-    margin-right: 8px;
-    border: unset;
-    width: 80px;
-    color: white;
-}
-input::placeholder{
-    color: white;
+    width: 1.5rem;
 }
 
 input::-webkit-outer-spin-button,
@@ -29,20 +40,24 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
+input {
+    width: 100px;
+    text-align: center;
+    background-color: unset;
+    border: unset;
+    color: white;
+    overflow: auto;
+    padding: 4px 8px;
+}
+
 input[type="number"] {
     -moz-appearance: textfield;
 }
 
-.currencyOne {
-    background-color: rgba(0, 0, 0, 0.753);
-    flex: 1;
-    max-width: 50%;
-    padding: 8px;
+input::placeholder {
+    color: white;
 }
 
-.currencyEUR {
-    background-color: rgba(0, 0, 0, 0.753);
-    max-width: 50%;
-    flex: 1;
-    padding: 8px;
+.inputNumber {
+    border-right: 1px solid rgba(255, 255, 255, 0.65);
 }
