--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,14 +1,11 @@
-:host{
-
-}
-
-app-calculator{
-    width: 100%;
-}
-
-app-graph{
-    width: 100%;
-    height: 100%;
-    // background-color: rgb(121, 111, 111);
+:host {
     padding: 2rem;
+    background-color:var(--bg-dark);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    max-width: 100%;
+    border-top-right-radius: 0px!important;
 }
