--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -1,16 +1,13 @@
 :host{
+    background-color: red;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 3.5rem;
     margin-top: 2rem;
 }
 
-.graph{
+table{
     width: 100%;
-}
-
-canvas{
-    max-width: 100%;
+    min-height: max-content;
 }
