--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,17 +6,23 @@
 }
 
 :root{
-    --bg-dark: rgb(47, 48, 56);
+    --bg-dark: rgb(77, 78, 90);
+    --bg-light: rgba(185, 180, 180, 0.555);
     --primary: rgb(226, 228, 243) ;
     --accent: rgb(189, 178, 28);
 }
 
+app-root{
+    overflow: hidden;
+}
+
 h2{
-    font-size: 26px;
+    font-size: 22px;
+    font-weight: 200;
 }
 
 h3{
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .mt-1{
