--- a/src/app/asset-card/asset-card.component.scss
+++ b/src/app/asset-card/asset-card.component.scss
@@ -11,3 +11,10 @@
     min-width: 200px;
     min-height: 150px;
 }
+
+.circle{
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background-color: rebeccapurple;
+}
