--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -9,3 +9,11 @@
     max-width: 100%;
     border-top-right-radius: 0px!important;
 }
+
+.info{
+    position: absolute;
+    left: 2rem; 
+    bottom: 0.8rem;
+    z-index: 10;;
+    font-size: 12px;
+}
