--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -1,13 +1,38 @@
 :host{
-    background-color: red;
-    height: 100%;
+    position: relative;
+    // background-color: red;
+    max-height: 65vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 2rem;
+    overflow: auto;
+    border-bottom: 1px white solid;
 }
 
 table{
     width: 100%;
-    min-height: max-content;
+    max-height: 100%;
+    overflow: hidden;
+    
+    tr{
+        width: 100%;
+
+    }
+    th{
+        width: 25px;
+        text-align: center;
+    }
+    td{
+        font-size: 14px;
+        padding:4px 2px;
+    }
+    
 }
+
+table, th, td {
+    border: 1px solid white;
+    text-align: center;
+  }
+
+
