asset cards layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
         <app-asset-card></app-asset-card>
         <app-asset-card></app-asset-card>
         <app-asset-card></app-asset-card>
+        <app-asset-card></app-asset-card>
     </div>
 
     <div class="rightSection">
