--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,13 +20,14 @@
 }
 
 .leftSection{
-    padding-top: 30px;
+    padding-top: 25px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: space-between;
+    align-items: center;
     width: 30%;
     height: 100%;
+    overflow: auto;
 }
 
 .rightSection{
