fetch asset card info

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,9 @@
-
-
 <app-sidebar class="pos-rel"></app-sidebar>
 
 <div class="wrapper flex-1">
 
-    <div class="leftSection">
-        <app-asset-card></app-asset-card>
-        <app-asset-card></app-asset-card>
-        <app-asset-card></app-asset-card>
-        <app-asset-card></app-asset-card>
-        <app-asset-card></app-asset-card>
-    </div>
+    <app-asset-section>
+    </app-asset-section>
 
     <div class="rightSection">
         <app-menu #menu></app-menu>
