--- a/src/app/asset-section/asset-section.component.html
+++ b/src/app/asset-section/asset-section.component.html
@@ -1,1 +1,24 @@
-<p>asset-section works!</p>
+<!-- <app-asset-card ></app-asset-card> -->
+<div *ngFor="let asset of assetNames.slice(0, 25); index as i" class="wrapper">
+    <div class="upperRow">
+        <div class="circle"></div>
+        <!-- <img src="{{ images[0] }}"> -->
+        <div class="rankingNr">#{{ assetRanks[i] }}</div>
+    </div>
+
+    <div class="infoPart">
+        <div class="row">
+            <span>Current Price</span>
+            <span>€ 454656</span>
+        </div>
+        <div class="row">
+            <span>Market Cap</span>
+            <span>€ 344545</span>
+        </div>
+    </div>
+
+    <!-- pos absolute -->
+    <div class="assetName">name asset</div>
+</div>
+
+
