--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,1 @@
-<div class="footer"><a class="impressum">Legal Notice</a></div>
+<div class="footer"><a class="impressum">Legal Notice | Data Protection</a></div>
