--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,3 @@
-<div class="footer"><a class="impressum">Legal Notice | Data Protection</a></div>
+<div class="footer">
+    <a (click)="imprintRequest = true" class="impressum">Impressum | Data Protection</a>
+</div>
