--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -18,7 +18,7 @@
 .impressum {
     position: absolute;
     bottom: 10px;
-    right: 3rem;
+    right: 60px;
     color: whitesmoke;
     font-size: 12px;
 
