--- a/src/app/asset-section/asset-section.component.scss
+++ b/src/app/asset-section/asset-section.component.scss
@@ -1,10 +1,12 @@
 :host {
-    padding-top: 25px;
+    // padding-top: 25px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     width: 30%;
+    min-width: 180px;
+    max-width: 230px;
     height: 100%;
     overflow: auto;
 }
@@ -19,9 +21,9 @@
     border-radius: 16px;
     padding: 55px 6px 40px 6px;
     color: white;
-    width: 175px;
-    min-height: 175px;
-    margin-top: 12px;
+    width: 100%;
+    min-height: 150px;
+    margin-top: 22px;
     overflow: hidden;
 
     &:first-child {
@@ -30,15 +32,16 @@
 
     .assetName {
         position: absolute;
-        bottom: 6px;
-        left: 8px;
-        font-size: 12px;
+        bottom: 10px;
+        left: 10px;
+        font-size: 14px;
+        color: black;
 
         &::after {
             content: "";
             width: 250px;
             height: 1px;
-            background-color: white;
+            background-color: rgb(0, 0, 0);
             position: absolute;
             top: 48%;
             right: 0;
@@ -66,6 +69,7 @@
     }
     .rankingNr {
         font-size: 20px;
+        filter: drop-shadow(0.6rem 0.4rem 0.6rem rgb(12, 12, 12));
     }
 }
 
