imprint page-back button layout animation

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,7 +1,12 @@
 <div class="wrapper">
-    <button><div>
-        <img src="assets/img/back.png" >
-    </div>return</button>
+    <button>
+        <div class="pos-rel">
+            <img src="assets/img/back.png">
+            <span>return</span>
+        </div>
+    </button>
+
+
     <h1>Impressum</h1>
     <span>Angaben gemäß § 5 TMG</span>
 
@@ -12,25 +17,25 @@
 
 
     <h2>Datenherkunft</h2>
-  
-        Alle Daten werden von der öffentlichen API Schnittstelle, die von Coingecko bereitgestellt wird, bezogen.<br>
-        Es kann keine Haftung für Richtigkeit und Aktualität der dargestellten Daten übernommen werden.<br>
-        <br>
-        Mehr erfahren unter:<br>
-        >> https://www.coingecko.com/<br><br>
-        API:<br>
-        >> https://www.coingecko.com/en/api<br>
+
+    Alle Daten werden von der öffentlichen API Schnittstelle, die von Coingecko bereitgestellt wird, bezogen.<br>
+    Es kann keine Haftung für Richtigkeit und Aktualität der dargestellten Daten übernommen werden.<br>
+    <br>
+    Mehr erfahren unter:<br>
+    >> https://www.coingecko.com/<br><br>
+    API:<br>
+    >> https://www.coingecko.com/en/api<br>
 
 
 
     <h2>Kontakt</h2>
-    
-        Vilia Zeisig<br>
-        Mühlenstrasse 6<br>
-        01774 Klingenberg<br>
-        Telefon: 0152-53458810<br>
-        E-Mail: sabine.detering@web.de<br>
-    
+
+    Vilia Zeisig<br>
+    Mühlenstrasse 6<br>
+    01774 Klingenberg<br>
+    Telefon: 0152-53458810<br>
+    E-Mail: sabine.detering@web.de<br>
+
 
     <h1>Datenschutz</h1>
 
