accent color, imprint button animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 </div>
 
 <!-- pos. absolute -->
-<app-imprint *ngIf="footer.imprintRequest"></app-imprint>
+<app-imprint *ngIf="imprintOpen" ></app-imprint>
 
 <!-- pos. absolute -->
 <app-footer #footer></app-footer>
