--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,6 +1,7 @@
 <div class="wrapper">
-    <button>
-        <div class="pos-rel">
+
+    <button >
+        <div (click)="closeImprint()" class="pos-rel">
             <img src="assets/img/back.png">
             <span>return</span>
         </div>
@@ -33,8 +34,8 @@
     Vilia Zeisig<br>
     Mühlenstrasse 6<br>
     01774 Klingenberg<br>
-    Telefon: 0152-53458810<br>
-    E-Mail: sabine.detering@web.de<br>
+    Telefon: 0175-69 16 381<br>
+ 
 
 
     <h1>Datenschutz</h1>
