--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="wrapperDiv">
 
     <div (click)="tabAnimation('table')" class="wrapper-table">
-        <div class="table" [class.animationTabChange]="activeTab == 'table'">
+        <div class="table" [class.animationTabChange]="activeTab == 'graph'">
         </div>
         <!-- pos absolute -->
         <a >TABLE</a>
@@ -9,7 +9,7 @@
     </div>
 
     <div (click)="tabAnimation('graph')" class="wrapper-graph">
-        <div class="graph" [class.animationTabChange]="activeTab == 'graph'">
+        <div class="graph" [class.animationTabChange]="activeTab == 'table'">
         </div>
         <a >GAPH</a>
 
