--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-    <a (click)="imprintRequest = true" class="impressum">Impressum | Data Protection</a>
+    <a (click)="openImprint()" class="impressum">Impressum | Data Protection</a>
 </div>
