--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -32,7 +32,7 @@ a{
 
         &::after{
             content: '';
-            background-color: var(--bg-light);
+            background-color: var(--bg-dark);
             border-top-left-radius: 16px;
             border-top-right-radius: 4px;
             width: 100%;
@@ -52,7 +52,7 @@ a{
 
         &::after{
             content: '';
-            background-color: var(--bg-light);
+            background-color: var(--bg-dark);
             border-top-left-radius: 4px;
             border-top-right-radius: 16px;
             width: 100%;
@@ -82,7 +82,7 @@ a{
         padding-right: 25px;
         border-right: 2px solid rgba(0, 0, 0, 0.24);
         height: 100%;
-        background-color: var(--bg-dark);
+        background-color: var(--accent);
         border-top-left-radius: 16px;
         border-top-right-radius: 4px;
         z-index: 3;
@@ -98,7 +98,7 @@ a{
         padding-left: 25px;
         padding-right: 25px;
         height: 100%;
-        background-color: var(--bg-dark);
+        background-color: var(--accent);
         border-top-left-radius: 4px;
         border-top-right-radius: 16px;
         z-index: 3;
