restructured services into separate folder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,10 @@
 
     <app-asset-section>
     </app-asset-section>
-
 </div>
 
 <!-- pos. absolute -->
-<app-imprint *ngIf="imprintOpen" ></app-imprint>
+<app-imprint *ngIf="imprintService.imprintOpen" ></app-imprint>
 
 <!-- pos. absolute -->
-<app-footer #footer></app-footer>
+<app-footer></app-footer>
