--- a/src/app/asset-section/asset-section.component.html
+++ b/src/app/asset-section/asset-section.component.html
@@ -9,7 +9,7 @@
     <div class="infoPart">
         <div class="row">
             <span>Current Price</span>
-            <span>€ {{ currentPrices[i] }}</span>
+            <span>€ {{ currentPrices[i].toFixed(2) }}</span>
         </div>
         <div class="row">
             <span 
