--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -21,6 +21,7 @@
     right: 60px;
     color: whitesmoke;
     font-size: 12px;
+    cursor: pointer;
 
     &:hover {
         color: var(--accent);
