--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -4,7 +4,7 @@
     align-items: center;
     gap: 2rem;
     // background-color: black;
-    height: 30px;
+    min-height: 30px;
     width: 100%;
     color: white;
 }
