--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
 <app-sidebar class="pos-rel"></app-sidebar>
 
 <div class="wrapper flex-1">
-
     <div class="rightSection">
         <app-menu #menu></app-menu>
         <app-main [currentTab]="menu.activeTab" class="flex-1 pos-rel border-rad"></app-main>
     </div>
-
-    <app-asset-section>
-    </app-asset-section>
+    <app-asset-section></app-asset-section>
 </div>
 
 <!-- pos. absolute -->
