--- a/src/app/graph/graph.component.scss
+++ b/src/app/graph/graph.component.scss
@@ -1,18 +1,18 @@
 :host{
-    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 3.5rem;
-    margin-top: 2rem;
+    flex: 1;
 }
 
 .graph{
     width: 100%;
-
+    max-width: 100%;
 }
 
 canvas{
     max-width: 100%;
+    flex: 1;
     // color: #03f8a234;
 }
