--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,19 +1,46 @@
 :host {
     padding: 2rem;
-    background-color:var(--bg-dark);
+    background-color: var(--bg-dark);
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     width: 100%;
     max-width: 100%;
-    border-top-right-radius: 0px!important;
+    border-top-right-radius: 0px !important;
+    gap: 2rem;
+    overflow: auto;
 }
 
-.info{
+.info {
     position: absolute;
-    left: 2rem; 
+    left: 2rem;
     bottom: 0.8rem;
-    z-index: 10;;
+    z-index: 10;
     font-size: 12px;
+}
+
+.infoContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 100%;
+    flex: 1;
+    display: flex;  
+    overflow: auto;
+    
+    .websiteLink{
+        position: relative;
+        margin-bottom: 12px;
+
+        &::after{
+            position: absolute;
+            bottom: -10px;
+            left: 0;
+            content: '';
+            width: 42px;
+            height: 1px; 
+            background-color: white;
+        }
+    }
 }
