--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -5,9 +5,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2rem;
+    margin-bottom: 1rem;
     overflow: auto;
     border-bottom: 1px white solid;
+    flex: 1;
 }
 
 table{
