--- a/src/app/calculator/calculator.component.scss
+++ b/src/app/calculator/calculator.component.scss
@@ -2,31 +2,84 @@
     width: 100%;
     display: flex;
     justify-content: center;
+}
 
-    .currencyOne {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+.currencySearch-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 0, 0);
+    border-radius: 16px;
+    height: 36px;
+    min-width: 150px;
+    width: 40%;
+    flex: 1;
+
+    // Inputfield for searching Amount
+    .inputNumber {
+        width: 45%;
         background-color: rgb(0, 0, 0);
-        border-radius: 16px;
         height: 36px;
-        min-width: 150px;
-        width: 40%;
+
     }
-    .currencyEUR {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: rgb(0, 0, 0);
-        border-radius: 16px;
-        height: 36px;
-        min-width: 150px;
-        width: 40%;
-        text-align: center;
 
-        .currStable {
-            width: 100px;
+    // contains searchInput and container for holding filtered Options
+    .searchAssetContainer {
+        width: 45%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        font-size: 14px;
+        background-color: black;
+        border-left: 1px rgb(211, 205, 205) solid;
+        height: 20px;
+
+
+        li {
+            width: fit-content;
+            margin-top: 8px;
+            list-style-type: none !important;
+            position: absolute;
+            left: 0;
+            background-color: rgb(58, 57, 57);
+            cursor: pointer;
         }
+        ul {
+            margin-top: 4px;
+            padding: 4px 8px;
+            border-bottom: 1px rgba(255, 255, 255, 0.424) solid;
+            transition: all ease-in-out 150ms;
+
+            &:hover {
+                background-color: rgba(104, 103, 103, 0.466);
+            }
+        }
+    }
+
+    // Inputfield for searching Asset
+    .inputAsset {
+    }
+}
+
+.currencyEUR-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 0, 0);
+    border-radius: 16px;
+    height: 36px;
+    min-width: 150px;
+    width: 40%;
+    text-align: center;
+    font-size: 14px;
+
+    .EUR {
+        width: 50%;
+        border-left: 1px rgb(211, 205, 205) solid;
+    }
+    input {
+        width: 50%;
     }
 }
 
@@ -41,13 +94,11 @@ input::-webkit-inner-spin-button {
 }
 
 input {
-    width: 100px;
     text-align: center;
-    background-color: unset;
+    background-color: transparent;
     border: unset;
     color: white;
     overflow: auto;
-    padding: 4px 8px;
 }
 
 input[type="number"] {
@@ -56,8 +107,4 @@ input[type="number"] {
 
 input::placeholder {
     color: white;
-}
-
-.inputNumber {
-    border-right: 1px solid rgba(255, 255, 255, 0.65);
 }
