--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,22 @@
-<app-sidebar class="pos-rel"></app-sidebar>
+<app-sidebar *ngIf="currScreenWidth > 1000" class="pos-rel"></app-sidebar>
+<!-- see Hostlistener -->
+
 
 <div class="wrapper flex-1">
-    <div class="rightSection">
+    <app-sidebar-mobil *ngIf="currScreenWidth < 1000" ></app-sidebar-mobil>
+
+    <div class="main">
         <app-menu #menu></app-menu>
         <app-main [currentTab]="menu.activeTab" class="flex-1 pos-rel border-rad"></app-main>
     </div>
     <app-asset-section></app-asset-section>
+
+    <app-footer *ngIf="currScreenWidth < 1000" ></app-footer>
+
 </div>
 
 <!-- pos. absolute -->
 <app-imprint *ngIf="imprintService.imprintOpen" ></app-imprint>
 
 <!-- pos. absolute -->
-<app-footer></app-footer>
+<app-footer *ngIf="currScreenWidth > 1000" ></app-footer> 
