--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,11 +1,17 @@
 
 
 :host{
+    display: block;
     position: absolute;
     right: 0;
     left: 0;
     bottom: 0;
     height: 50px;
+
+    @media (max-width: 800px) {
+        position: relative;
+        width: 100%;
+    }
 }
 
 
@@ -14,6 +20,10 @@
     position: relative;
     height: 100%;
     width: 100%;
+
+    @media (max-width: 800px) {
+        position: inherit;
+    }
 }
 .impressum {
     position: absolute;
