--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -12,8 +12,12 @@
     overflow: auto;
 }
 
-
-
+// .wrapper{
+//     max-width: 100%;
+//     width: 100%;
+//     flex: 1;
+//     overflow: auto;
+// }
 
 .info {
     position: absolute;
@@ -31,6 +35,7 @@
     width: 100%;
     flex: 1;
     display: flex;  
+    margin-top: 26px;
 
     .icon-web{
         width: 24px;
@@ -40,6 +45,12 @@
     a{
         text-decoration: none;
         color: white;
+    }
+
+    // causes issues, when not restricted to a width
+    .text{
+        max-width: 95%;
+        word-break: break-word;
     }
 
     .websiteLink{
